fix radio button wrap

--- a/src/pages/quis/quis.scss
+++ b/src/pages/quis/quis.scss
@@ -7,36 +7,57 @@ page-quis {
   .div-soal  {
     height: 400px;
   }
+  .div-soal .back-ques {
+    position: absolute;
+    left: 5px;
+    top: 270px
+  }
+  .div-soal .forw-ques {
+    position: absolute;
+    right: 5px;
+    top: 270px
+  }
+
+  // segmented style radio button
   .segmented-button label {
     display: -moz-inline-box;
     -moz-box-orient: vertical;
     display: inline-block;
-    vertical-align: middle;
-    *vertical-align: auto;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -khtml-border-radius: 4px;
-    border-radius: 4px;
-    text-shadow: white;
-    background-color: #e5e5e5;
-    border: 1px solid #b2b2b2;
-    color: #000000;
-    padding: 12px 30px;
-    font-size: 32px;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
-    -o-border-radius: 0;
-    -ms-border-radius: 0;
-    -khtml-border-radius: 0;
-    border-radius: 0;
-    margin-right: -5px;
+    position: relative;
+    margin: 0 5px;
+    // vertical-align: middle;
+    // *vertical-align: auto;
+    // -moz-border-radius: 4px;
+    // -webkit-border-radius: 4px;
+    // -o-border-radius: 4px;
+    // -ms-border-radius: 4px;
+    // -khtml-border-radius: 4px;
+    // border-radius: 4px;
+    // text-shadow: white;
+    // background-color: #e5e5e5;
+    // border: 1px solid #b2b2b2;
+    // color: #000000;
+    // padding: 5px 25px;
+    // font-size: 25px;
+    // -moz-border-radius: 0;
+    // -webkit-border-radius: 0;
+    // -o-border-radius: 0;
+    // -ms-border-radius: 0;
+    // -khtml-border-radius: 0;
+    // border-radius: 0;
+    // margin-right: 10px;
   }
-
-  .segmented-button label {
-    *display: inline;
+  .segmented-button .wrap-radio span {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    color: #00FF00;
+    top: 12px;
+    left: 19px;
   }
+  // .segmented-button label {
+  //   *display: inline;
+  // }
 
   // .segmented-button label:hover {
   //   -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
@@ -73,55 +94,79 @@ page-quis {
   //   box-shadow: none;
   // }
 
-  .segmented-button label.first {
-    -moz-border-radius-topleft: 4px;
-    -webkit-border-top-left-radius: 4px;
-    -o-border-top-left-radius: 4px;
-    -ms-border-top-left-radius: 4px;
-    -khtml-border-top-left-radius: 4px;
-    border-top-left-radius: 4px;
-    -moz-border-radius-bottomleft: 4px;
-    -webkit-border-bottom-left-radius: 4px;
-    -o-border-bottom-left-radius: 4px;
-    -ms-border-bottom-left-radius: 4px;
-    -khtml-border-bottom-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
+  // .segmented-button label.first {
+  //   -moz-border-radius-topleft: 4px;
+  //   -webkit-border-top-left-radius: 4px;
+  //   -o-border-top-left-radius: 4px;
+  //   -ms-border-top-left-radius: 4px;
+  //   -khtml-border-top-left-radius: 4px;
+  //   border-top-left-radius: 4px;
+  //   -moz-border-radius-bottomleft: 4px;
+  //   -webkit-border-bottom-left-radius: 4px;
+  //   -o-border-bottom-left-radius: 4px;
+  //   -ms-border-bottom-left-radius: 4px;
+  //   -khtml-border-bottom-left-radius: 4px;
+  //   border-bottom-left-radius: 4px;
+  // }
+  //
+  // .segmented-button label.last {
+  //   -moz-border-radius-topright: 4px;
+  //   -webkit-border-top-right-radius: 4px;
+  //   -o-border-top-right-radius: 4px;
+  //   -ms-border-top-right-radius: 4px;
+  //   -khtml-border-top-right-radius: 4px;
+  //   border-top-right-radius: 4px;
+  //   -moz-border-radius-bottomright: 4px;
+  //   -webkit-border-bottom-right-radius: 4px;
+  //   -o-border-bottom-right-radius: 4px;
+  //   -ms-border-bottom-right-radius: 4px;
+  //   -khtml-border-bottom-right-radius: 4px;
+  //   border-bottom-right-radius: 4px;
+  // }
 
-  .segmented-button label.last {
-    -moz-border-radius-topright: 4px;
-    -webkit-border-top-right-radius: 4px;
-    -o-border-top-right-radius: 4px;
-    -ms-border-top-right-radius: 4px;
-    -khtml-border-top-right-radius: 4px;
-    border-top-right-radius: 4px;
-    -moz-border-radius-bottomright: 4px;
-    -webkit-border-bottom-right-radius: 4px;
-    -o-border-bottom-right-radius: 4px;
-    -ms-border-bottom-right-radius: 4px;
-    -khtml-border-bottom-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
+  // .segmented-button input:checked + label,
+  // .segmented-button label.selected {
+  //   background-color: #5ef441;
+  //   color: #FFFFFF;
+  // }
 
-  .segmented-button input:checked + label,
-  .segmented-button label.selected {
-    background-color: #5ef441;
-    color: #FFFFFF;
-  }
+  // .segmented-button input:disabled + label {
+  //   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #efefef));
+  //   background: -webkit-linear-gradient(#ffffff, #efefef);
+  //   background: -moz-linear-gradient(#ffffff, #efefef);
+  //   background: -o-linear-gradient(#ffffff, #efefef);
+  //   background: -ms-linear-gradient(#ffffff, #efefef);
+  //   background: linear-gradient(#ffffff, #efefef);
+  //   cursor: default;
+  //   color: #b2b2b2;
+  //   border-color: #cccccc;
+  //   -moz-box-shadow: none;
+  //   -webkit-box-shadow: none;
+  //   -o-box-shadow: none;
+  //   box-shadow: none;
+  // }
 
-  .segmented-button input:disabled + label {
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #efefef));
-    background: -webkit-linear-gradient(#ffffff, #efefef);
-    background: -moz-linear-gradient(#ffffff, #efefef);
-    background: -o-linear-gradient(#ffffff, #efefef);
-    background: -ms-linear-gradient(#ffffff, #efefef);
-    background: linear-gradient(#ffffff, #efefef);
-    cursor: default;
-    color: #b2b2b2;
-    border-color: #cccccc;
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    -o-box-shadow: none;
-    box-shadow: none;
+  //tablet only style
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .div-soal .back-ques {
+      position: absolute;
+      left: 10px;
+      top: 500px;
+      padding: 25px;
+      font-size: 25px;
+    }
+    .div-soal .forw-ques {
+      position: absolute;
+      right: 10px;
+      top: 500px;
+      padding: 25px;
+      font-size: 25px;
+    }
+    .div-choice {
+      margin-top: 180px;
+    }
+    // .segmented-button label {
+    //   font-size: 50px;
+    // }
   }
 }
