--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -94,3 +94,7 @@ $toolbar-background: #f53d3d;
 
 @import "roboto";
 @import "noto-sans";
+
+
+$radio-md-icon-width: 50px;
+$radio-md-icon-height: 50px;
